--- a/configs/x86_64.config
+++ b/configs/x86_64.config
@@ -475,8 +475,8 @@ CONFIG_PACKAGE_lm-sensors=y
 CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_lua-neturl=y
-# CONFIG_PACKAGE_luci-app-argon-config is not set
-# CONFIG_PACKAGE_luci-app-kucat-config is not set
+CONFIG_PACKAGE_luci-app-argon-config=y
+CONFIG_PACKAGE_luci-app-kucat-config=y
 # CONFIG_PACKAGE_luci-app-aria2 is not set
 CONFIG_PACKAGE_luci-app-commands=y
 # CONFIG_PACKAGE_luci-app-daed is not set
@@ -535,9 +535,9 @@ CONFIG_PACKAGE_luci-i18n-natmap-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-netspeedtest-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ota-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-ota-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-package-manager-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-passwall2-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-passwall2-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
@@ -716,6 +716,13 @@ CONFIG_PACKAGE_zoneinfo-core=y
 CONFIG_PACKAGE_zram-swap=y
 CONFIG_PARTED_READLINE=y
 CONFIG_PCRE2_JIT_ENABLED=y
+#add
+CONFIG_PACKAGE_luci-app-udpxy=y
+CONFIG_PACKAGE_luci-app-uhttpd=y
+CONFIG_PACKAGE_luci-app-softethervpn=y
+CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-app-wireguard=y
+#add
 CONFIG_REPRODUCIBLE_DEBUG_INFO=y
 CONFIG_RUBY_ENABLE_YJIT=y
 CONFIG_SAMBA4_SERVER_AVAHI=y
@@ -728,16 +735,16 @@ CONFIG_SING_BOX_BUILD_GVISOR=y
 CONFIG_SING_BOX_BUILD_QUIC=y
 CONFIG_SING_BOX_BUILD_UTLS=y
 CONFIG_SING_BOX_BUILD_WIREGUARD=y
-CONFIG_TARGET_KERNEL_PARTSIZE=128
+CONFIG_TARGET_KERNEL_PARTSIZE=64
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
-CONFIG_TARGET_ROOTFS_PARTSIZE=1024
+CONFIG_TARGET_ROOTFS_PARTSIZE=960
 CONFIG_UNETD_VXLAN_SUPPORT=y
 CONFIG_USE_GC_SECTIONS=y
 CONFIG_USE_LLVM_HOST=y
 CONFIG_USE_LTO=y
 CONFIG_VPNC_GNUTLS=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
-CONFIG_VMDK_IMAGES=y
+#CONFIG_VMDK_IMAGES=y
 # CONFIG_OPENSSL_WITH_ERROR_MESSAGES is not set
 # CONFIG_PACKAGE_boost is not set
 # CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_V2ray_Plugin is not set
