--- a/configs/x86_64_demo.config
+++ b/configs/x86_64_demo.config
@@ -667,12 +667,12 @@ CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
 CONFIG_PACKAGE_simple-obfs-client=y
-CONFIG_PACKAGE_sing-box=y
-CONFIG_PACKAGE_smartdns=y
+# CONFIG_PACKAGE_sing-box=y
+# CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_smartmontools=y
 CONFIG_PACKAGE_socat=y
 CONFIG_PACKAGE_speedtest-cli=y
-CONFIG_PACKAGE_sqm-scripts=y
+# CONFIG_PACKAGE_sqm-scripts=y
 CONFIG_PACKAGE_swap-utils=y
 CONFIG_PACKAGE_sysfsutils=y
 CONFIG_PACKAGE_taskset=y
@@ -735,12 +735,12 @@ CONFIG_SAMBA4_SERVER_AVAHI=y
 CONFIG_SAMBA4_SERVER_NETBIOS=y
 CONFIG_SAMBA4_SERVER_VFS=y
 CONFIG_SAMBA4_SERVER_WSDD2=y
-CONFIG_SING_BOX_BUILD_CLASH_API=y
-CONFIG_SING_BOX_BUILD_ECH=y
-CONFIG_SING_BOX_BUILD_GVISOR=y
-CONFIG_SING_BOX_BUILD_QUIC=y
-CONFIG_SING_BOX_BUILD_UTLS=y
-CONFIG_SING_BOX_BUILD_WIREGUARD=y
+# CONFIG_SING_BOX_BUILD_CLASH_API=y
+# CONFIG_SING_BOX_BUILD_ECH=y
+# CONFIG_SING_BOX_BUILD_GVISOR=y
+# CONFIG_SING_BOX_BUILD_QUIC=y
+# CONFIG_SING_BOX_BUILD_UTLS=y
+# CONFIG_SING_BOX_BUILD_WIREGUARD=y
 CONFIG_TARGET_KERNEL_PARTSIZE=128
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
 CONFIG_TARGET_ROOTFS_PARTSIZE=1024
