--- a/configs/x86_64_demo.config
+++ b/configs/x86_64_demo.config
@@ -741,7 +741,7 @@ CONFIG_SAMBA4_SERVER_WSDD2=y
 # CONFIG_SING_BOX_BUILD_QUIC=y
 # CONFIG_SING_BOX_BUILD_UTLS=y
 # CONFIG_SING_BOX_BUILD_WIREGUARD=y
-CONFIG_TARGET_KERNEL_PARTSIZE=128
+CONFIG_TARGET_KERNEL_PARTSIZE=64
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
 CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 CONFIG_UNETD_VXLAN_SUPPORT=y
@@ -758,3 +758,9 @@ CONFIG_VMDK_IMAGES=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
 # CONFIG_PACKAGE_trojan-plus is not set
 # CONFIG_PACKAGE_v2ray-plugin is not set
+#add
+CONFIG_PACKAGE_luci-app-udpxy=y
+CONFIG_PACKAGE_luci-app-uhttpd=y
+CONFIG_PACKAGE_luci-app-softethervpn=y
+CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-app-wireguard=y
