--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -52,7 +52,7 @@ on:
 env:
   REPO_URL: https://github.com/openwrt/openwrt
   REPO_BRANCH: openwrt-24.10
-  CONFIG_FILE: configs/x86_64.config
+  CONFIG_FILE: configs/x86_64_demo.config
   DIY_SCRIPT: scripts/diy-x86_64_demo.sh  # 保持你的修改
   FEEDS_CONF: feeds.conf.default
   CLASH_KERNEL: amd64
