--- a/configs/x86_64_demo.config
+++ b/configs/x86_64_demo.config
@@ -773,6 +773,7 @@ CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
 CONFIG_PACKAGE_luci-app-gecoosac=y
+CONFIG_PACKAGE_luci-app-xupnpd
 
 # 3G/4G Support
 CONFIG_PACKAGE_comgt-ncm=y
